# confit-rs

./: Cargo.toml  README.md
src/: config_dir.rs  error.rs  extension.rs  lib.rs
