[package]
name = "confit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ron = { version = "0.8.1", optional = true }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107", optional = true }
serde_yaml = { version = "0.9.25", optional = true }
toml = { version = "0.8.0", optional = true }
windows = { version = "0.51.1", features = ["Win32_UI_Shell", "Win32_Foundation"] }

[features]
default = ["ext_json", "ext_ron", "ext_toml", "ext_yaml"]
ext_json = ["serde_json"]
ext_ron = ["ron"]
ext_toml = ["toml"]
ext_yaml = ["serde_yaml"]
