[package]
name = "confit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "2.0.3"
windows = { version = "0.51.1", features = [
    "Win32_UI_Shell",
    "Win32_Foundation",
] }

serde_json = { version = "1.0.115", optional = true }
ron = { version = "0.8.1", optional = true }
toml = { version = "0.8.12", optional = true }
serde_yaml = { version = "0.9.33", optional = true }

[features]
default = ["json"]
json = ["dep:serde_json"]
ron = ["dep:ron"]
toml = ["dep:toml"]
yaml = ["dep:serde_yaml"]
